examples/test/testpolicy4889.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4889
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key27: value34
      key48: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value46
          key38: value9
          key29: value20
      podSelector:
        matchLabels:
          key42: value47
